{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Ingame",
            "id": "ba0fd2f9-378e-4b16-9a43-43484bbf351e",
            "actions": [
                {
                    "name": "M_LeftClick",
                    "type": "Button",
                    "id": "c1f26fa9-aa98-4334-bcbc-407deeafec60",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "M_RightClick",
                    "type": "Button",
                    "id": "58678b0a-7e19-4813-b02a-68917685ba83",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "M_Wheel",
                    "type": "Value",
                    "id": "889f0f0d-896f-4f4a-a38e-9b350664f1b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "M_WheelClick",
                    "type": "Button",
                    "id": "23917d50-ea7d-4745-b15e-04a60dda8aae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "M_MouseMove",
                    "type": "Value",
                    "id": "ae30a0dd-3c4d-4961-b7ba-3d5d798bec58",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "976d4acd-901f-4266-97d2-e4aeb9274c7f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "M_LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c34613b-4d0c-44e9-a68e-a344d41f7bc9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "M_RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "31f35ab7-ea1d-450e-badd-299ae22c13da",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "M_Wheel",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9d471a88-0688-4092-ad90-1fd1ed7ec7b4",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "M_Wheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1c119bce-749c-4bea-8f8c-78acec90fbb4",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "M_Wheel",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ca51c3a2-a414-44f0-8cd5-79937b369c10",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "M_WheelClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab4be0d2-a542-42ba-84a3-93145f258110",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "M_MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}